syntax = "proto2";

package raft_msg;

import "append_entries_request.proto";
import "append_entries_response.proto";
import "command_request.proto";
import "command_response.proto";
import "join_request.proto";
import "join_response.proto";
import "vote_request.proto";
import "vote_response.proto";

message RaftMessage {
    oneof raft_msg {
        AppendEntriesRequest append_entries_request = 1;
        AppendEntriesResponse append_entries_response = 2;
        CommandRequest command_request = 3;
        CommandResponse command_response = 4;
        JoinRequest join_request = 5;
        JoinResponse join_response = 6;
        VoteRequest vote_request = 7;
        VoteResponse vote_response = 8;
    }
}